--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,1 +1,34 @@
-<p>sign-up works!</p>
+<div  fxLayout="column" class="background" fxFlex="100" fxLayoutAlign="center stretch">
+
+    <div fxLayout="row"  fxFlex="100" fxLayoutAlign="center center">
+        <mat-card  fxFlex="30%"  fxLayoutAlign="center center">
+            <form fxLayout="column" style="margin:auto;" [formGroup]="signUpDetails" fxLayoutGap="2em">
+                <h2>Sign Up</h2>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Email</mat-label>
+                        <input type="text" formControlName="email" matInput>
+                        <mat-icon matSuffix>email</mat-icon>
+                        <mat-error>Email required</mat-error>
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Password</mat-label>
+                        <input type="password" formControlName="password" matInput>
+                        <mat-icon matSuffix>remove_red_eye</mat-icon>
+                        <mat-error>Password required</mat-error>
+                    </mat-form-field>
+                </div>
+    
+                <div>
+                    <div fxLayout="row" fxLayoutAlign="space-between center">
+                        <button [disabled]="!signUpDetails.valid" color="accent" mat-raised-button (click)="submit()">sign Up</button>
+                    </div>
+                   
+                </div>
+            </form>
+        </mat-card>
+    </div>
+
+</div>
