--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+app-sign-in,app-sign-up{
+    height: 100%;
+}
