--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,18 @@
-<p>dashboard works!</p>
+<div fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="1em" style="margin-top: 1em;" fxFlex='100'>
+    <div fxLayout="row" fxLayoutAlign="center stretch" style="font-size: 20px;font-weight: 500; color: gray">
+        File Upload
+    </div>
+    <div style="border: 1px solid  grey;">
+
+    </div>
+    <div fxLayout="row" fxLayoutAlign="start stretch" style="width: 100%;">
+        <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="gappx" fxFlex = '50'>
+            <button mat-flat-button style="background: linear-gradient(89.81deg, #2F9FFD 0.15%, #3AEDFE 97.25%); color: white;
+            box-shadow: 0px 4px 4px 0px #00000040;" >Upload</button>
+        </div>
+
+        <div fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="gappx" fxFlex = '50'>
+            sdf
+        </div>
+    </div>
+</div>
