--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -4,6 +4,9 @@
         <mat-card  fxFlex="30%"  fxLayoutAlign="center center">
             <form fxLayout="column" style="margin:auto;" [formGroup]="loginDetails" fxLayoutGap="2em">
                 <h2>Sign In</h2>
+                <div style="color: rgb(241, 98, 98);">
+                    {{message}}
+                </div>
                 <div>
                     <mat-form-field appearance="fill">
                         <mat-label>Email</mat-label>
@@ -23,7 +26,7 @@
     
                 <div>
                     <div fxLayout="row" fxLayoutAlign="space-between center">
-                        <button [disabled]="!loginDetails.valid" color="accent" mat-raised-button (click)="submit()">signIn</button>
+                        <button [class.spinner]="loading" [disabled]="!loginDetails.valid || loading" color="accent" mat-raised-button (click)="submit()">signIn</button>
                         <span style="cursor: pointer; font-weight: 600;"  routerLink="/sign-Up">Sing up</span>
                     </div>
                    
