--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div div fxLayout="row" fxLayoutAlign="start stretch" style="width: 100%;">
+    <div div fxLayout="column" fxLayoutAlign="start stretch" style="width: 100%;">
         <router-outlet ></router-outlet>
     </div>
 </div>
