--- a/src/app/components/list-of-files/list-of-files.component.html
+++ b/src/app/components/list-of-files/list-of-files.component.html
@@ -1,3 +1,14 @@
-<div fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="px">
-    
+<div fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="px" style="width: 100%;">
+    <div fxLayout="row" fxLayoutAlign="start stretch" *ngFor="let item of usr"style="width: 100%;" >
+        <div fxLayout="row" fxLayoutAlign="space-evenly stretch" style="width: 100%;">
+            <div fxFlex = "5">
+                <mat-icon style="font-size: 40px; color: gray; width: 40px;height: 40px;">image</mat-icon>
+            </div>
+            
+            <div fxFlex = "40">
+                <span>{{item.name}}</span>
+            </div>
+         
+        </div>
+    </div>
 </div>
