--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -23,7 +23,7 @@
     
                 <div>
                     <div fxLayout="row" fxLayoutAlign="space-between center">
-                        <button [disabled]="!signUpDetails.valid" color="accent" mat-raised-button (click)="submit()">sign Up</button>
+                        <button [class.spinner]="loading" [disabled]="!signUpDetails.valid || loading"  color="accent" mat-raised-button (click)="submit()">sign Up</button>
                         <span style="cursor: pointer; font-weight: 600;"  routerLink="/sign-In">Sign In</span>
                     </div>
                    
